# big-climate-ml

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  climate-ml-to-sdss.md  docker-compose.yml  docker-entrypoint.sh  progress.md  pyproject.toml  requirements-serve.txt  requirements.txt
config/: config.yaml
config/models/: uc1_weather_clf.yaml  uc2_climate_reg.yaml  uc4_spatial_interp.yaml
data/dummy/: bmkg_forecast.json  chirps_monthly.json  nasa_power_monthly.json  qc_log.json  rdtr_pola_ruang.json
docs/: dokumen-teknis-ml-climate.md
scripts/: export_pdf.py  generate_dummy_data.py
sql/: 01_ml_tables.sql
src/climate_ml/: __init__.py  config.py
src/climate_ml/data/: db.py  dummy.py  loaders.py  validation.py
src/climate_ml/features/: build.py  spatial.py  temporal.py
src/climate_ml/models/: anomaly_detector.py  climate_regressor.py  climate_risk.py  disaster_risk.py  registry.py  spatial_interpolator.py  weather_classifier.py
src/climate_ml/pipelines/: evaluate.py  flow.py  predict.py  train.py
src/climate_ml/serving/: api.py  schemas.py
src/climate_ml/utils/: io.py  logging.py  metrics.py
tests/: conftest.py
tests/api/: test_api.py
tests/data/: test_data_contract.py
tests/integration/: test_predict_pipeline.py  test_train_pipeline.py  test_uc2_pipeline.py
tests/unit/: test_anomaly.py  test_climate_risk.py  test_features.py  test_metrics.py  test_registry.py  test_validation.py
web/: index.html
